--- a/Game tools 2 assignment/Game tools 2 assignment.csproj
+++ b/Game tools 2 assignment/Game tools 2 assignment.csproj
@@ -313,6 +313,8 @@
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Procedural Mesh\ExtrudeRandomEdges.cs" />
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Runtime Editing\RuntimeEdit.cs" />
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Vertex Colors\HighlightNearestFace.cs" />
+    <Compile Include="Assets\Scripts\AimingScript.cs" />
+    <Compile Include="Assets\Scripts\CameraTurnScript.cs" />
     <Compile Include="Assets\Scripts\PlayerLocomotion.cs" />
     <Compile Include="Assets\Scripts\UserControls.cs" />
   </ItemGroup>
